--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /PhysicsBall/PhysicsBall.CSharp.Editor.csproj
 /PhysicsBall/PhysicsBall.CSharp.Plugins.csproj
 /PhysicsBall/PhysicsBall.sln
+/PhysicsBall/Temp
